# sisdoa

./: .env.example  Dockerfile  README.md  bootstrap_db.py  pyproject.toml
.antigravity/rules/: database.md
.antigravity/skills/audit-infra/: SKILL.md
.antigravity/skills/check-python-gravity/: SKILL.md
src/sisdoa/: config.py
src/sisdoa/domain/: models.py
src/sisdoa/repository/: database.py
