[project]
name = "sisdoa"
version = "1.0.0"
description = "Sistema de Controle de Doações - CLI para gestão de estoque e validade de doações"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Eduardo Fernandes Alves" }
]
keywords = ["donation", "inventory", "cli", "nonprofit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "respx>=0.23.1",
]

[project.scripts]
sisdoa = "sisdoa.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sisdoa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (Python version upgrades)
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (ruff formatter handles this)
    "F401",  # imported but unused (needed for runtime like timezone.utc)
]

[tool.ruff.lint.isort]
known-first-party = ["sisdoa"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
